solve cellphone overlaping

--- a/mockups/css/home.css
+++ b/mockups/css/home.css
@@ -112,6 +112,7 @@ body > section .hero h1{
 #video{
     min-height: 720px;
     padding-top: 300px;
+    height: initial;
 }
 
 
